<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:gravity="center_horizontal"
                android:text="@string/heading_team_a"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/team_a_one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/colorPrimary"
                android:onClick="addOneToTeamA"
                android:text="@string/team_a_one_point"
                android:textColor="@android:color/white"/>


            <Button
                android:id="@+id/team_a_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/colorPrimary"
                android:onClick="addTwoToTeamA"
                android:text="@string/team_a_two_points"
                android:textColor="@android:color/white"/>


            <Button
                android:id="@+id/team_a_three_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:onClick="addThreeToTeamA"
                android:text="@string/team_a_three_points"
                android:textColor="@android:color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:gravity="center_horizontal"
                android:text="@string/heading_team_b"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/team_b_one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/colorPrimary"
                android:onClick="addOneToTeamB"
                android:text="@string/team_b_one_point"
                android:textColor="@android:color/white"/>


            <Button
                android:id="@+id/team_b_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/colorPrimary"
                android:onClick="addTwoToTeamB"
                android:text="@string/team_b_two_points"
                android:textColor="@android:color/white"/>


            <Button
                android:id="@+id/team_b_three_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:onClick="addThreeToTeamB"
                android:text="@string/team_b_three_points"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/team_a_score"
                android:textColor="@color/colorAccent"
                android:textSize="100sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/team_b_score"
                android:textColor="@color/colorAccent"
                android:textSize="100sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:onClick="resetScores"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/reset"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
